<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/common_padding">

    <TextView
        android:text="Xác nhận thông tin"
        android:gravity="center"
        android:textSize="25dp"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginVertical="10dp"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_name" />

    <EditText
        android:id="@+id/edt_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/bgr_search_view"
        android:padding="@dimen/common_padding" />

    <TextView
        android:layout_marginVertical="10dp"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/phone_number" />

    <EditText
        android:id="@+id/edt_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/bgr_search_view"
        android:padding="@dimen/common_padding" />

    <TextView
        android:layout_marginVertical="10dp"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/address" />

    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:background="@drawable/bgr_search_view"
        android:padding="@dimen/common_padding" />

    <TextView
        android:layout_marginVertical="10dp"
        android:textSize="18dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hình thức thanh toán" />

    <TextView
        android:id="@+id/edt_purchase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thanh toán khi nhận hàng"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:background="@drawable/bgr_search_view"
        android:padding="@dimen/common_padding" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:layout_marginBottom="@dimen/common_margin"
            android:background="@drawable/layout_btn_login"
            android:paddingHorizontal="20dp"
            android:text="@string/confirm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginEnd="@dimen/common_margin"
            android:layout_marginBottom="@dimen/common_margin"
            android:background="@drawable/layout_btn_login"
            android:text="@string/cancel" />
    </RelativeLayout>
</LinearLayout>