<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/book_bgr"
        android:padding="15dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:id="@+id/sign_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/sign_up"
            android:textSize="22dp">

        </TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_acc"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="text"
                app:counterEnabled="true">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_edt_email"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_edt_repassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_edt_password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_re_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_pass"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="textPassword">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_edt_repassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_fullname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/ll_dob"
            android:layout_below="@id/layout_address"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_tt_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E0E0E0"
                android:padding="@dimen/common_padding"
                android:text="Ngày sinh "
                android:textColor="@color/black"
                android:textSize="17dp" />
            <TextView
                android:id="@+id/tv_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E0E0E0"
                android:padding="@dimen/common_padding"
                android:textColor="@color/black"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_dob"
            android:background="#E0E0E0">

            <TextView
                android:id="@+id/tv_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#E0E0E0"
                android:padding="@dimen/common_padding"
                android:text="@string/gender"
                android:textColor="@color/black"
                android:textSize="17dp" />

            <RadioGroup
                android:id="@+id/rd_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/common_margin"
                    android:checked="true"
                    android:text="Nam" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Nữ" />
            </RadioGroup>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/btn_confirm_register"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="10dp"
            android:visibility="gone" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_confirm_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_gender"
            android:layout_margin="20dp"
            android:background="@drawable/layout_btn_login"
            android:text="@string/sign_up"
            android:textColor="@color/text_login" />
    </RelativeLayout>
</LinearLayout>